[package]
name = "tracing-rolling"
version = "0.1.0"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/PrivateRookie/tracing-rolling"
keywords = ["logging", "tracing", "rolling"]
categories = ["development-tools::debugging"]
description = "helper crate to customize rolling log file with tracing crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
regex = "1.7.1"
time = { version = "0.3.20", features = [
    "formatting",
    "local-offset",
    "macros",
    "parsing",
] }
tracing = "0.1"
tracing-subscriber = "0.3.16"


[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }
